# agentic-k8s

./: .gitignore  Dockerfile  README.md  docker-compose.yml
agent/llm_tools/: k8s.py
agent/manifests/: nginx-example-2.yaml  nginx-example.yaml  nginx-example.yml  postgresql.yaml
argocd/: agent-app.yaml  gitea-app.yaml  nginx-example-app.yaml
backlog/: config.yml
backlog/completed/: task-004 - Add-Script-to-Install-Helm-CLI.md  task-005 - Create-Helm-Chart-for-NGINX-Example.md  task-006 - Add-bootstrap.sh-Script-for-Full-Environment-Setup.md  task-008 - Add-Helm-Chart-for-Zellij-Access.md  task-010 - Remove-Zellij.md  task-011 - Add-Firefox-dashboard-landing-page.md  task-012 - Remove-extraneous-port-forwards.md  task-014 - Verify-bootstrap.sh-setup.md  task-017 - Handle-existing-Firefox-port-forward.md  task-019 - Add-agent-app-for-Git-operations.md  task-020 - Expose-GitOps-repo-from-agent-pod.md
backlog/tasks/: task-002 - Add-Script-to-Install-K3s-Locally.md  task-003 - Add-Script-to-Install-kubectl-and-Test-Connection.md  task-004 - Add-Script-to-Install-Helm-CLI.md  task-005 - Create-Helm-Chart-for-NGINX-Example.md  (+24 more)
kagent/: README.md
llm-py/: README.md  docker-compose.yml
mcp/: MCP.md  README.md  client.py  helper.py  server.py
pure-llm-vs-rag/: .gitignore  README.md  evaluation.json  evaluation.py  pyproject.toml
pure-llm-vs-rag/evaluations/: evaluation-2025-12-11-12-49.json  evaluation-2025-12-11-13-01.json  evaluation-2025-12-12-08-11.json
scripts/: bootstrap.sh  install-helm.sh  install-k3s.sh  install-kubectl.sh
tools/: kubectl_llm.py
(+55 files in other folders)
